@@ -1,6 +1,6 @@
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.31"
+    id "org.jetbrains.kotlin.jvm" version "1.3.61"
 }
 
 apply(from: "$gradleScripts/kotlin.gradle")
@@ -12,10 +12,10 @@ apply(plugin: "war")
 defaultTasks("installDist")
 
 mainClassName = "com.hexagonkt.BenchmarkKt"
-applicationDefaultJvmArgs = [ "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts" ]
+applicationDefaultJvmArgs = [ "-XX:+UseNUMA", "-XX:+UseParallelGC" ]
 
 war {
-    archiveName = "ROOT.war"
+    archiveFileName = "ROOT.war"
 }
 
 installDist.dependsOn("war")
